[gd_scene load_steps=5 format=3 uid="uid://dj2u2io208rik"]

[ext_resource type="Script" path="res://Template/PauseMenuOptions/PauseMenuOptions.gd" id="1_7gaeq"]
[ext_resource type="FontFile" uid="uid://b4wyxsf25wcmx" path="res://Template/Assets/Fonts/ReemKufiInk-Regular.ttf" id="2_ktrah"]
[ext_resource type="PackedScene" uid="uid://c6p1x71haijmj" path="res://Template/ButtonWrapper/ButtonWrapper.tscn" id="3_la3q5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs1th"]
bg_color = Color(0.333333, 0.439216, 0.788235, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.411765, 0.627451, 0.792157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 10
shadow_offset = Vector2(5, -5)

[node name="PauseMenuOptions" type="Panel"]
custom_minimum_size = Vector2(500, 350)
offset_right = 250.0
offset_bottom = 225.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bs1th")
script = ExtResource("1_7gaeq")

[node name="LeftVBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 312.0

[node name="Control" type="Control" parent="LeftVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Title" type="Label" parent="LeftVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 24
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LeftVBox"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
size_flags_horizontal = 0

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeftVBox/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LanguageLabel" type="Label" parent="LeftVBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 16
text = "LanguageLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="LeftVBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 16
text = "FullScreenLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control4" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="LeftVBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 16
text = "VolumeLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="LeftVBox/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LanguageButton" type="OptionButton" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ktrah")
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Espa√±ol"
popup/item_1/id = 1

[node name="Control2" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="FullScreenButton" type="CheckButton" parent="LeftVBox/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_direction = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ktrah")

[node name="Control4" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="ReturnButton" parent="LeftVBox" instance=ExtResource("3_la3q5")]
layout_mode = 2
text = "Return"
